--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <html>
 <head>
-<title>Page Title</title>
+    <link rel="stylesheet" href="styles.css">
+<title>Naveesh Khattar</title>
 </head>
 <body>
+    
+<div class="heading">
+<h1>Naveesh Khattar</h1>
+</div>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<p>This is my personal website.</p>
 
 </body>
 </html>
