--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1>Naveesh Khattar</h1>
 </div>
 
-<p>This is my personal website.</p>
+<p>This is my personal website. lolol</p>
 
 </body>
 </html>
