--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
 <title>Naveesh Khattar</title>
 </head>
 <body>
-    
-<div class="heading">
-<h1>Naveesh Khattar</h1>
-</div>
-
-<p>This is my personal website.</p>
+    <div class="bg"></div>  
+    <div class="heading">Naveesh Khattar</div>
+    <div class="description">This is my personal website.</div>
 
 </body>
 </html>
