--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="bg"></div>  
     <div class="heading">Naveesh Khattar</div>
-    <div class="description">This is my personal website.</div>
+    <div class="description">I’m a designer exploring the areas of interaction and graphic design. Apart from helping businesses to design stable and scalable interfaces, I devote a good amount of my time to learning and building new things like 3D, motion and programming.</div>
 
 </body>
 </html>
