--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
     <title>Naveesh Khattar</title>
 </head>
 
-<body>
-    <div class="bg"></div>
-    <div class="heading">Naveesh Khattar</div>
-    <div class="description">I’m a designer exploring the areas of interaction and graphic design. Apart from helping businesses to design stable and scalable interfaces, I devote a good amount of my time to learning and building new things like 3D, motion and programming.</div>
 
+
+<body>
+
+    <div class="bg">
+
+        <div class="heading">Naveesh Khattar</div>
+        <div class="description">I’m a designer exploring the areas of interaction and graphic design. Apart from helping businesses to design stable and scalable interfaces, I devote a good amount of my time to learning and building new things like 3D, motion and programming.</div>
+
+    </div>
 </body>
+
+
 
 </html>
