--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         })
 
 
+        var raycaster = new THREE.Raycaster();
+        var mouse = new THREE.Vector2();
+
+
         var geometry = new THREE.TorusKnotGeometry(1.5, 0.6, 100, 16);
         var material = new THREE.MeshBasicMaterial({
             color: 0xe0e0ff,
@@ -48,14 +52,46 @@
         });
         var mesh = new THREE.Mesh(geometry, material);
 
+        mesh.position.x = 2;
+
+
         scene.add(mesh);
 
         var light = new THREE.PointLight(0xffffff, 1, 500);
         light.position.set(10, 0, 25);
         scene.add(light);
 
+        var render = function() {
+            requestAnimationFrame(render);
 
-        renderer.render(scene, camera);
+
+            renderer.render(scene, camera);
+        }
+
+        function onMouseMove(event) {
+            event.preventDefault();
+
+            mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+            mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+
+            raycaster.setFromCamera(mouse, camera);
+
+            var intersects = raycaster.intersectObjects(scene.children, true);
+            for (var i = 0; i, intersects.length; i++) {
+                this.tl = new TimelineMax();
+                this.tl.to(intersects[i].object.rotation, 20, {
+                    x: 45,
+                    y: 45,
+                    repeat: 2,
+                    ease: Expo.easeOut
+                })
+                tl.timeScale(0.1);
+            }
+        }
+
+
+        window.addEventListener('mousemove', onMouseMove);
+        render();
     </script>
 </body>
 
