--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 
         controls = new THREE.OrbitControls(camera, renderer.domElement);
 
-        var raycaster = new THREE.Raycaster();
-        var mouse = new THREE.Vector2();
+        //var raycaster = new THREE.Raycaster();
+        //var mouse = new THREE.Vector2();
 
 
         var geometry = new THREE.TorusKnotGeometry(1.5, 0.6, 100, 16);
         var material = new THREE.MeshBasicMaterial({
-            color: 0xe0e0ff,
+            color: 0xffffff,
             wireframe: true
         });
         var mesh = new THREE.Mesh(geometry, material);
@@ -66,33 +66,34 @@
         var render = function() {
             requestAnimationFrame(render);
 
+            mesh.rotation.x += 0.01;
 
             renderer.render(scene, camera);
         }
 
-        function onMouseMove(event) {
-            event.preventDefault();
+        //function onMouseMove(event) {
+        //    event.preventDefault();
 
-            mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
-            mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+        //    mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+        //mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
 
-            raycaster.setFromCamera(mouse, camera);
+        //  raycaster.setFromCamera(mouse, camera);
 
-            var intersects = raycaster.intersectObjects(scene.children, true);
-            for (var i = 0; i, intersects.length; i++) {
-                this.tl = new TimelineMax();
-                this.tl.to(intersects[i].object.rotation, 20, {
-                    x: 45,
-                    y: 45,
-                    repeat: 2,
-                    ease: Expo.easeOut
-                })
-                tl.timeScale(0.1);
-            }
-        }
+        //var intersects = raycaster.intersectObjects(scene.children, true);
+        //for (var i = 0; i, intersects.length; i++) {
+        //  this.tl = new TimelineMax();
+        //this.tl.to(intersects[i].object.rotation, 20, {
+        //  x: 45,
+        //y: 45,
+        //repeat: 2,
+        //ease: Expo.easeOut
+        //})
+        //tl.timeScale(0.1);
+        //}
+        //}
 
 
-        window.addEventListener('mousemove', onMouseMove);
+        //window.addEventListener('mousemove', onMouseMove);
         render();
     </script>
 </body>
