--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             requestAnimationFrame(render);
 
             mesh.rotation.x += 0.01;
+            mesh.rotation.y += 0.01;
 
             renderer.render(scene, camera);
         }
