added contact button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <div class="bg">
 
         <div class="heading">Naveesh Khattar</div>
-        <div class="description">I’m a designer exploring the areas of interaction and graphic design. Apart from helping businesses design stable and scalable interfaces, I devote my time to learning and exploring animation, 3D graphics and programming.</div>
+        <div class="description">I’m a designer exploring the areas of interaction and graphic design. Apart from helping businesses design stable and scalable interfaces, I devote my time to learning and exploring animation, 3D graphics and programming.<br>
+            <br>
+            <br>
+            <a href="mailto:naveeshkhattar@gmail.com">Contact</a>
+        </div>
 
     </div>
     <script>
